--- a/htdocs/sibert/inside.html
+++ b/htdocs/sibert/inside.html
@@ -24,11 +24,20 @@
                         sono tenuta a recitare non meno di 18 &#8220;Ave Maria&#8221;.
                     </p>
                     <p>
-                        Una volta che quel castigo è compiuto, può trovare il Suo regalo nel cassetto sotto il Suo letto a Blackheath,
-                        sul lato della Sua scrivania.
+                        Una volta che quel castigo è compiuto, Lei può trovare il Suo regalo all'indirizo seguente:
+                    </p>
+
+                    <p>
+                        <strong>Flat 3, 16 Kidbrooke Grove, London SE3 0LF, Regno Unito</strong>
+                    </p>
+
+                    <p>
+                        È nel cassetto sotto il Suo letto sul lato della Sua scrivania, come indicato dal gabbiano.
                     </p>
 
                     <p>La prego di voler gradire i miei più distinti saluti.</p>
+
+                    <img src="blackheath_bedside.jpg">
                 </div>
                 <div id="footer">
 
