--- a/htdocs/sibert/recover_password.html
+++ b/htdocs/sibert/recover_password.html
@@ -32,7 +32,7 @@
 
                     <p>
                         <i>Si prega di notare: i cittadini dagli comuni della Spezia e Lerici che scelgono fidanzati che non sono puri 100%
-                        spezzini D.O.P. sono risponsabili per i pecati di quei miscredenti.</i>
+                        spezzini D.O.P. sono risponsabili per i peccati di quei miscredenti.</i>
                     </p>
 
                     <img src="beside_table.jpg">
